--- a/0_tools/0_tools.Rmd
+++ b/0_tools/0_tools.Rmd
@@ -8,6 +8,10 @@ output:
     number_sections: true
 ---
 
+```{r echo = FALSE, message = FALSE}
+knitr::opts_chunk$set(fig.height = 3.5)
+```
+
 We will start the class with some tools that will be useful for success in this class. Going forward, we will use these tools for any [computing]{.red} and [data analysis]{.red} tasks.
 
 <br />
@@ -538,11 +542,283 @@ Advanced R (https://adv-r.hadley.nz)
 
 # ggplot2
 
+We will be using the `ggplot2` package for doing graphics in this class.
+
+The first time on your machine you’ll need to install the package:
+
+```{r eval = FALSE}
+install.packages("ggplot2")
+```
+
+Whenever you first want to plot during an `R` session, we need to load the library. 
+
+```{r}
+library(ggplot2)
+```
+
+## Why visualize?
+
+The sole purpose of visualization is communication. Visualization offers an alternative way of communicating numbers than simply using tables. Often, we can get more information out of our numbers graphically than with numerical summaries alone. Through the use of [exploratory data analysis]{.red}, we can see what the data can tell us beyond the formal modeling or hypothesis testing task.
+
+For example, let's look at the following dataset.
+
+```{r}
+anscombe
+```
+
+Anscombe's Quartet is comprised of 4 datasets that have nearly identical simple statistical properties. Each dataset contains 11 (x, y) points with the same mean, median, standard deviation, and correlation coefficient between x and y.
+
+```{r, echo=FALSE, message = FALSE, warning = FALSE}
+library(dplyr)
+library(tidyr)
+
+anscombe %>%
+  gather(variable, value) %>%
+  separate(variable, into = c("variable", "dataset"), sep = 1) %>%
+  group_by(variable, dataset) %>%
+  mutate(id = 1:n()) %>%
+  spread(variable, value) %>%
+  group_by(dataset) %>%
+  summarise(mean_x = mean(x), sd_x = sd(x),
+            mean_y = mean(y), sd_y = sd(y),
+            cor = cor(x, y)) %>%
+  knitr::kable()
+```
+
+But this doesn't tell the whole story. Let's look closer at these datasets.
+
+```{r, echo=FALSE}
+anscombe %>%
+  gather(variable, value) %>%
+  separate(variable, into = c("variable", "dataset"), sep = 1) %>%
+  group_by(variable, dataset) %>%
+  mutate(id = 1:n()) %>%
+  spread(variable, value) %>%
+  ggplot() +
+  geom_point(aes(x, y)) +
+  geom_smooth(aes(x, y), method = "lm", se = FALSE) +
+  facet_wrap(.~dataset)
+```
+
+Visualizations can aid communication and make the data easier to perceive. It can also show us things about our data that numerical summaries won't necessarily capture.
+
+## A Grammar of Graphics
+
+The grammar of graphics was developed by Leland Wilkinson (https://www.springer.com/gp/book/9780387245447). It is a set of grammatical rules for creating perceivable graphs. Rather than thinking about a limited set of graphs, we can think about graphical forms. This abstraction makes thinking, creating, and communicating graphics easier.
+
+Statistical graphic specifications are expressed using the following components.
+
+1. **data**: a set of data operations that create variables from datasets
+2. **trans**: variable transformations
+3. **scale**: scale transformations
+4. **coord**: a coordinate system
+5. **element**: graphs (points) and their aesthetic attributes (color)
+6. **guide**: one or more guides (axes, legends, etc.)
+
+`ggplot2` is a package written by Hadley Wickham (https://vita.had.co.nz/papers/layered-grammar.html) that implements the ideas in the grammar of graphics to create layered plots.
+
+`ggplot2` uses the idea that you can build every graph with graphical components from three sources
+
+1. the data, represented by `geom`s
+2. the scales and coordinate system
+3. the plot annotations 
+
+This works by mapping values in the data to visual properties of the geom (aesthetics) like size, color, and locations.
+
+Let's build a graphic. We start with the data. We will use the `diamonds` dataset, and we want to explor the relationship between carat and price.
+
+```{r}
+ggplot(data = diamonds)
+```
+
+Next we need to specify the aesthetic (variable) mappings.
+
+```{r}
+ggplot(data = diamonds, mapping = aes(carat, price))
+```
+
+Now we choose a geom to display our data.
+
+```{r}
+ggplot(data = diamonds, mapping = aes(carat, price)) +
+  geom_point()
+```
+
+And add an aesthetic to our plot.
+
+```{r}
+ggplot(data = diamonds, mapping = aes(carat, price)) +
+  geom_point(aes(color = cut))
+```
+
+We could add another layer.
+
+```{r}
+ggplot(data = diamonds, mapping = aes(carat, price)) +
+  geom_point(aes(color = cut)) +
+  geom_smooth(aes(color = cut), method = "lm")
+```
+
+And finally, we can specify coordinate transformations.
+
+```{r}
+ggplot(data = diamonds, mapping = aes(carat, price)) +
+  geom_point(aes(color = cut)) +
+  geom_smooth(aes(color = cut), method = "lm") +
+  scale_y_sqrt()
+  
+```
+
+Notice we can add on to our plot in a layered fashion.
+
+## Graphical Summaries
+
+There are some basic charts we will use in this class that cover a wide range of cases. For univariate data, we can use dotplots, histograms, and barcharts. For two dimensional data, we can look at scatterplots and boxplots.
+
+### Scatterplots
+
+Scatterplots are used for investigating relationships between two numeric variables. To demonstrate some of the flexibility of scatterplots in `ggplot2`, let's answer the following question.
+
+> Do cars with big engines use more fuel than cars with small engines?
+
+We will use the `mpg` dataset in the `ggplot2` package to answer the question. This dataset contains observations collected by the US Environmental Protection Agency on 38 models of car.
+
+```{r}
+dim(mpg)
+summary(mpg)
+head(mpg)
+```
+
+`mpg` contains the following variables: `displ`, a car’s engine size, in litres, and `hwy`, a car’s fuel efficiency on the highway, in miles per gallon (mpg).
+
+```{r}
+ggplot(data = mpg) +
+  geom_point(mapping = aes(displ, hwy))
+```
+
+So we can say, yes, cars with larger engines have worse fuel efficiency. But there is more going on here.
+
+```{r echo = FALSE}
+mpg %>%
+  mutate(outlier = displ > 5 & hwy > 20) %>%
+  ggplot() +
+  geom_point(mapping = aes(displ, hwy, colour = outlier, size = outlier)) +
+  scale_color_manual(values = c("black", "red")) +
+  scale_size_manual(values = 1:2) +
+  theme(legend.position = "none")
+
+
+```
+
+The red points above seem to have higher `mpg` than they should based on engine size alone (outliers). Maybe there is a confounding variable we've missed. The `class` variable of the mpg dataset classifies cars into groups such as compact, midsize, and SUV.
+
+```{r}
+ggplot(data = mpg) +
+  geom_point(mapping = aes(displ, hwy, colour = class))
+```
+
+The colors show that many of the unusual points are two-seater cars, probably sports cars! Sports cars have large engines like SUVs and pickup trucks, but small bodies like midsize and compact cars, which improves their gas mileage.
+
+Instead of color, we could also map a categorical variable (like `class`) to shape, size, and transparency (`alpha`).
+
+So far we have mapped aesthetics to variables in our dataset. What happens if we just want to generally change the aesthetics of our plots, without tying that to data? We can specify general aesthetics as parameters of the `geom`, instead of specifying them as aesthetics (`aes`).
+
+```{r}
+ggplot(data = mpg) +
+  geom_point(mapping = aes(displ, hwy), colour = "darkgreen", size = 2)
+```
+
+When interpreting a scatterplot we can look for big patterns in our data, as well as form, direction, and strength of relationships. Additionally, we can see small patterns and deviations from those patterns (outliers).
+
+[ ]{.pagebreak}
+
+[**Your Turn**]{.yourturn}
+
+1. Make a scatterplot of `cty` vs. `hwy` mpg using the `mpg` dataset.
+
+2. Describe the relationship that you see.
+
+3. Map color and shape to type of drive the car is (see `?mpg` for details on the variables.). Do you see any patterns?
+
+4. Alter your plot from part 3. to make all the points be larger.
+
+[ ]{.pagebreak}
+
+
+### Histograms, Barcharts, and Boxplots
+
+We can look at the distribution of continuous variables using **histograms** and **boxplots** and the distribution of discrete variables using **barcharts**.
+
+```{r}
+ggplot(data = mpg) +
+  geom_histogram(mapping = aes(hwy), bins = 30) 
+## boxplots will look very different sometimes with different binwidths
+
+ggplot(data = mpg) +
+  geom_boxplot(mapping = aes(drv, hwy)) 
+## boxplots allow us to see the distribution of a cts rv conditional on a discrete one
+## we can also show the actual data at the same time
+ggplot(data = mpg) +
+  geom_boxplot(mapping = aes(drv, hwy)) +
+  geom_jitter(mapping = aes(drv, hwy), alpha = .5)
+
+ggplot(data = mpg) +
+  geom_bar(mapping = aes(drv)) 
+## shows us the distribution of a categorical variable
+```
+
+### Facets
+
+So far we've looked at 
+
+1. how one (or more) variables are distributed - barchart or histogram
+2. how two variables are related - scatterplot, boxplot
+3. how two variables are related, conditioned on other variables - color
+
+Sometimes color isn't enough to show conditioning because of crowded plots.
+
+```{r}
+ggplot(data = diamonds, mapping = aes(carat, price)) +
+  geom_point(aes(color = cut))
+```
+
+When this is the case, we can *facet* to display plots for different subsets. To do this, we specify row variables ~ column variables (. for none).
+
+```{r}
+ggplot(data = diamonds, mapping = aes(carat, price)) +
+  geom_point(aes(color = cut)) +
+  facet_wrap(. ~ cut)
+```
+
+If instead we have two variables we want to facet by, we can use `facet_grid()`.
+
+```{r, fig.height=6}
+ggplot(data = diamonds, mapping = aes(carat, price)) +
+  geom_point(aes(color = cut)) +
+  facet_grid(color ~ cut)
+```
+
+[ ]{.pagebreak}
+
+[**Your Turn**]{.yourturn}
+
+Using the `mpg` dataset,
+
+1. Make a histogram of `hwy`, faceted by `drv`.
+
+2. Make a scatterplot that incorporates color, shape, size, and facets.
+
+3. BONUS - Color your histograms from 1. by `cyl`. Did this do what you thought it would? (Look at `fill` and `group` as options instead).
+
+[ ]{.pagebreak}
+
 ## Additional resources
 
 Documentation and cheat sheets (https://ggplot2.tidyverse.org)
 
 Book website (http://had.co.nz/ggplot2/)
+
+Ch. 3 of R4DS (https://r4ds.had.co.nz/data-visualisation.html)
 
 # tidyverse
 
